--- a/storm/pom.xml
+++ b/storm/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.dream_lab.bm.stream_iot</groupId>
 	<artifactId>iot-bm-storm</artifactId>
-
+	<version>0.1</version>
 	<name>IoT-BM-STORM</name>
 	<description>IoT Benchmark Bolts and Topologies</description>
 	<packaging>jar</packaging>
@@ -33,7 +33,7 @@
 				</descriptorRefs>
 				<archive>
 				<manifest>
-				<mainClass></mainClass>
+				<mainClass>in.dream_lab.bm.stream_iot.storm.topo.apps.SampleTopology</mainClass>
 				</manifest>
 				</archive>
 				</configuration>
@@ -47,7 +47,6 @@
 				</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
 
@@ -67,10 +66,6 @@
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>3.3</version>
-		</dependency>
-		<dependency>
-			<groupId>in.dream_lab.bm.stream_iot</groupId>
-			<artifactId>iot-bm-tasks</artifactId>
 		</dependency>
 	</dependencies>
 </project>
